# stream-abcs

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/stream_abcs/: __init__.py  acknowledged.py  asynchronous.py  batched.py  synchronous.py
